# backend-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_state_machine_v2.py  0003_auction_admin_budget.py  0004_stripe_replacement.py  265e109d5077_provider_auth_fields.py  37c35c21c1bf_invoices_cfdi_4_0.py  51d59168fd89_provider_documents_kyc.py  71aa4c438409_audit_log.py  8b5b97b4bc8b_provider_availability_scheduling.py  c9fce44307b2_ratings.py  d4f8e2c3b1a0_conekta_payment_fields.py
app/: __init__.py  config.py  main.py
app/core/: auth.py  database.py  exceptions.py  logging.py  middleware.py  pagination.py
app/models/: __init__.py  _audit.py  audit.py
app/schemas/: __init__.py  auction.py  catalog.py  (+10 more)
scripts/: __init__.py  migrate_ddb_to_pg.py
tests/: README.md  _db.py  _jwt.py  conftest.py  test_admin_catalog.py  test_admin_payments.py  test_admin_providers.py  test_admin_quotations.py  test_admin_salers.py  test_admin_stats.py  test_auction_service.py  test_audit.py  test_auth.py  test_auth_dev_mode.py  test_cfdi.py  test_conekta.py  test_email.py  test_health.py  test_kyc.py  test_no_mp_references.py  test_openapi.py  test_openapi_snapshot.py  test_pagination.py  test_pricing.py  test_provider_auth.py  test_quotation_service.py  test_rating.py  test_refund.py  test_reports.py  test_scheduling.py  test_search.py  test_sms.py  test_storage.py  test_stripe_migration.py  test_stripe_service.py  test_stripe_webhook.py  test_structured_logging.py
(+53 files in other folders)
