[project]
name = "mobbit-backend-service"
version = "0.1.0"
description = "Mobbit B2B/B2C marketplace backend (FastAPI port of the Rust Lambdas)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Auth (Cognito JWT)
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    # HTTP client (MercadoPago, Copomex)
    "httpx>=0.27.0",
    # Misc
    "python-multipart>=0.0.12",
    "email-validator>=2.2.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-python-jose>=3.3.4.20240106",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers --cov=app --cov-report=term-missing"
markers = [
    "unit: pure unit tests (no DB, no HTTP)",
    "integration: tests that hit the FastAPI app or the test DB",
]
